--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "webdriverio-curso-abstracta",
+  "name": "desafiofinal-webdriverio-abstracta",
   "version": "1.0.0",
-  "description": "",
+  "description": "To make it easy for you to get started with GitLab, here's a list of recommended next steps.",
   "main": "index.js",
   "scripts": {
-    "test": "wdio ./wdio.conf.js",
-    "testing": "set AMBIENTE=testing&&npm run test",
-    "prod": "set AMBIENTE=prod&&npm run test"
+    "test": "wdio ./wdio.conf.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/francisco142/desafiofinal-webdriverio-abstracta.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://gitlab.com/francisco142/desafiofinal-webdriverio-abstracta/issues"
+  },
+  "homepage": "https://gitlab.com/francisco142/desafiofinal-webdriverio-abstracta#readme",
   "devDependencies": {
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/register": "^7.17.7",
     "@wdio/allure-reporter": "^7.20.0",
-    "@wdio/local-runner": "^7.20.1",
+    "@wdio/local-runner": "^7.20.2",
     "@wdio/mocha-framework": "^7.20.0",
     "@wdio/selenium-standalone-service": "^7.20.1",
     "@wdio/spec-reporter": "^7.20.0",
     "chai": "^4.3.6",
-    "wdio-image-comparison-service": "^3.1.1",
-    "webdriverio": "^7.20.1"
+    "webdriverio": "^7.20.2"
   },
   "dependencies": {
-    "@wdio/cli": "^7.20.1"
+    "@wdio/cli": "^7.20.2",
+    "chai-webdriverio": "^1.0.0",
+    "wdio-image-comparison-service": "^3.1.1"
   }
 }
